--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" href="userAsset/favicon.png">
 </head>
 <body>
-    <div id="wrapper">
+    <div id="wrapper" class="main">
 
         <div class="container">
             <div class="navbar">
@@ -296,7 +296,7 @@
     </div>
 
     <footer>
-        <div class="container">
+        <div class="">
             <div class="footer-wrapper">
                 <div class="footer-faded-text">Sumit Bhardwaj</div>
 
