--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
                     <a href="https://github.com/Phenominal1"><i class="fa-brands fa-github"></i></a>
                     <a href="https://twitter.com/Pandit_g_sumit"><i class="fa-brands fa-x-twitter"></i></a>
                     <a href="https://www.instagram.com/sumit_bhardwaj_19/"><i class="fa-brands fa-instagram"></i></a> 
-                    <a href="https://mail.google.com/mail/u/0/#inbox"><i class="fa-solid fa-envelope"></i></a>
+                    <a href="#"><i class="fa-solid fa-envelope"></i></a>
                 </div>
             </div>
         </div>
